--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link href="https://fonts.googleapis.com/css?family=Acme|Josefin+Sans|Muli" rel="stylesheet">
 
   <!-- Template for errors -->
-  <script type="text/x-tmpl-mustache" id="error-template">
+  <!-- <script type="text/x-tmpl-mustache" id="error-template">
     <p> {{ responseText }}</p>
-  </script>
+  </script> -->
 
   <!-- Template for weather data -->
   <script type="text/x-tmpl-mustache" id="weather-results-template">
